syntax = "proto3";

package syft.core.tensor;

import "proto/core/tensor/tensor.proto";
import "proto/lib/numpy/array.proto";

message FixedPrecisionTensor {
    oneof data {
        Tensor tensor = 1;
        syft.lib.numpy.NumpyProto array = 2;
    };

    uint32 base = 3;
    uint32 precision = 4;
}
