syntax = "proto3";

package syft.lib.sympc;

import "proto/lib/torch/tensor.proto";
import "proto/lib/python/dict.proto";
import "proto/lib/numpy/array.proto";

message ReplicatedSharedTensor {
  // repeated fields cannot use oneof.
  repeated syft.lib.torch.TensorProto tensor = 1;
  repeated syft.lib.numpy.NumpyProto array = 2;
  syft.lib.python.Dict config = 3;
  string session_uuid = 4;
  bytes ring_size = 5;
}
